--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ a {
 	line-height: 40px;
 	letter-spacing: 0.84px;
 	font-weight: 700;
-	color: #7b6cd5;
+	color: #634900;
 	text-align: center;
 }
 .section-title-desc {
@@ -59,18 +59,18 @@ a {
 	line-height: 40px;
 	font-weight: 400;
 	letter-spacing: 0.45px;
-	color: #666;
+	color: #444;
 	text-align: center;
 }
 /*Banner*/
 .yoga-template .banner {
-	background-image: url(../img/yoga-header.jpg);
+	background-image: url(../img/gradient1.jpg);
 	background-repeat: no-repeat; 
 	background-size: cover;
 	background-position: center center;
 	width: 100%;
 	height: auto;
-	color:#fff;
+	color:#634900;
 	position: relative;
 }
 .yoga-template .banner .banner-overlay {
@@ -79,12 +79,12 @@ a {
     width: 100%;
     height: 100%;
     max-width: 1920px;
-    background-color: rgba(0,0,0,.5);
+    /* background-color: rgba(0,0,0,.5); */
     z-index: 2;
 }
 .yoga-template .banner .top-bar{
 	padding:26px 15px; 
-	border-bottom: 1px solid #fff;
+	border-bottom: 1px solid #634900;
 }
 .yoga-template .banner .top-bar-left ,
 .top-bar-right {
@@ -116,7 +116,7 @@ a {
 }
 .yoga-template .banner .top-bar-left a:hover,
 .yoga-template .banner .top-bar-right a:hover{
-	color:#fe86d4;
+	color:#634900;
 	text-decoration: none;
 }
 .yoga-template .banner .top-bar-left i,
@@ -160,14 +160,14 @@ a {
 	letter-spacing: 0.6px;
 	font-weight: 700;
 	padding: 21px 32px 19px;
-	background-color: #fe86d4;
+	background-color: #834900;
 	color:#fff;
 	border-radius: 3px;
 	text-transform: uppercase;
 }
 .yoga-template .banner .banner-content a.banner-btn:hover {
 	text-decoration: none;
-	color: #7b6cd5;
+	background-color: #634900;
 }
 /*Service*/
 .yoga-template .service-section {
@@ -181,7 +181,7 @@ a {
 }
 .yoga-template .service-section .service-detail a:hover .service-title{
 	text-decoration: none;
-	color: #fe86d4;
+	color: #347A45;
 }
 .yoga-template .service-section .service-title {
 	font-family: 'Josefin Sans', sans-serif;
@@ -189,7 +189,7 @@ a {
 	line-height: 40px;
 	font-weight: 700;
 	letter-spacing: 0.75px;
-	color: #000;
+	color: #634900;
 	margin-bottom: 15px;
 }
 .yoga-template .service-section .service-desc {
@@ -215,7 +215,7 @@ a {
     font-family: 'Roboto Slab', serif;
     font-size: 28px;
     line-height: 40px;
-    color: #7b6cd5;
+    color:  #347A45;
     font-weight: 600;
 	text-align: left;
 }
@@ -237,7 +237,7 @@ a {
   width: 1.3em;
   font-size: 12px;
   line-height: 40px;
-  color: #7b6cd5; 
+  color: #347A45; 
 }
 .yoga-template .best-class-club .best-class-club-img {
 	background-image: url(../img/the-best-class-yoga.jpg);
@@ -260,7 +260,7 @@ a {
 }
 .yoga-template .advantages-section .advantages-detail a:hover .advantages-detail-title {
 	text-decoration: none;
-	color: #fe86d4;
+	color: #347A45;
 }
 .yoga-template .advantages-section .advantages-detail-title {
 	font-family: 'Josefin Sans', sans-serif;
@@ -330,7 +330,7 @@ a {
 }
 .yoga-template .yogaPlace-section .yogaPlace-col a:hover .yogaPlace-title {
 	text-decoration: none;
-	color: #fe86d4;
+	color: #347A45;
 }
 .yoga-template .yogaPlace-section .yogaPlace-title {
 	font-family: 'Josefin Sans', sans-serif;
@@ -364,7 +364,7 @@ a {
 	font-weight: 600;
 	letter-spacing: 0.6px;
 	text-align: center;
-	color:#7b6cd5;
+	color: #634900;
 }
 .yoga-template .contact-section .appointment .appointment-desc {
 	font-family: inherit;
@@ -411,7 +411,7 @@ a {
     font-size: 14px;
     line-height: 37px;
     color: rgb(255, 255, 255);
-    background-color: rgb(123, 108, 213);
+    background-color:  #634900;
     font-weight: 600;
     border-radius: 3px;
     transform: translate(-50%, -50%);
@@ -430,8 +430,8 @@ a {
 .appointment-form .appointment-form-btn {
 	width: 100%;
     padding: 18px 0 13px;
-    background-color: #7b6cd5;
-    border: 1px solid #7b6cd5;
+    background-color:  #834900;
+    border: 1px solid #834900;
     border-radius: 3px;
     color: #fff;
     font-family: 'Josefin Sans', sans-serif;
@@ -440,6 +440,10 @@ a {
     font-weight: 700;
     letter-spacing: 0.6px;
     text-transform: uppercase;
+}
+.yoga-template .contact-section .appointment 
+.appointment-form .appointment-form-btn:hover{
+    background-color: #634900;
 }
 .yoga-template .contact-section .open-time {
 	text-align: center;
@@ -456,7 +460,7 @@ a {
 	line-height: 40px;
 	font-weight: 600;
 	letter-spacing: 0.25px;
-	color: #7b6cd5;
+	color: #347A45;
 	margin-bottom: 5px;
 }
 .yoga-template .contact-section .open-time .open-time-clock {
@@ -501,7 +505,7 @@ a {
 }
 .yoga-template .trainer-section .trainer-col a:hover .trainer-title {
 	text-decoration: none;
-	color: #fe86d4;
+	color: #347A45;
 }
 .yoga-template .trainer-section .trainer-title {
 	font-family: 'Josefin Sans', sans-serif;
@@ -533,14 +537,14 @@ a {
 	font-weight: 700;
 	color:#fff;
 	text-transform:uppercase; 
-	background-color: #7b6cd5;
-	border: 1px solid #7b6cd5;
+	background-color:#347A45;
+	border: 1px solid#347A45;
 	border-radius: 3px;
 	padding: 21px 52px 19px 53px;
 }
 .yoga-template .join-us-section .join-us-btn:hover {
 	text-decoration: none;
-	color: #fe86d4;
+	color: #347A45;
 }
 .yoga-template .join-us-section .join-us-call {
 	font-family: inherit;
@@ -559,12 +563,12 @@ a {
 }
 .yoga-template .join-us-section .join-us-phone-nr:hover {
 	text-decoration: none;
-	color: #fe86d4;
+	color:#347A45;
 }
 /*Copyright*/
 .yoga-template .footer .copyright {
 	padding: 50px 15px;
-	background-color: #7b6cd5;
+	background-color:#347A45;
 	color: #fff;
 	font-family: inherit;
 	font-size: 14px;
@@ -574,7 +578,7 @@ a {
 	color: #fff;
 }
 .yoga-template .footer .copyright .created-by:hover {
-	color: #fe86d4;
+	color: #347A45;
 	text-decoration: none;
 }
 .yoga-template .footer .copyright .social {
@@ -586,7 +590,7 @@ a {
 	color: #fff;
 }
 .yoga-template .footer .copyright .social a:hover {
-	color: #fe86d4;
+	color: #347A45;
 }
 .yoga-template .footer .copyright .social .fab {
 	padding-left: 14px;
