--- a/css/responsive.css
+++ b/css/responsive.css
@@ -31,18 +31,19 @@
 	}
 	.yoga-template  .advantages-section {
 		background-image: url(../img/advantages-of-yoga-mobile.jpg);
+		backface-visibility: hidden;
 	    background-size: cover;
 	    background-repeat: no-repeat;
 	    background-position: center center;
 	}
 	.yoga-template  .advantages-section .section-title{
-		color: #fe86d4;
+		color: #347A45;
 	}
 	.yoga-template  .advantages-section .section-title-desc {
 		color: #fff;
 	}
 	.yoga-template .advantages-section .advantages-detail-title {
-		color: #fe86d4;
+		color: #347A45;
     	margin-top: 10px;
 	}
 	.yoga-template .advantages-section .advantages-detail-desc {
@@ -123,7 +124,7 @@
 	    font-size: 14px;
 	    line-height: 37px;
 	    color: rgb(255, 255, 255);
-	    background-color: rgb(123, 108, 213);
+	    background-color: #347A45;
 	    font-weight: 600;
 	    border-radius: 3px;
 	    transform: translate(-50%, -50%);
