social media deleted confirmed

--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,7 @@ a {
 	color: #347A45;
 	text-decoration: none;
 } */
-.yoga-template .footer .copyright .social {
+/* .yoga-template .footer .copyright .social {
 	text-align: right;
 	font-size: 24px;
 	line-height: 26px;
@@ -595,4 +595,4 @@ a {
 }
 .yoga-template .footer .copyright .social .fab {
 	padding-left: 14px;
-}
+} */
